--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@zendeskgarden/react-tables": "^1.2.6",
+    "@zendeskgarden/react-theming": "^3.2.1",
     "axios": "^0.18.0",
-    "bulma": "^0.7.4",
+    "install": "^0.12.2",
+    "npm": "^6.9.0",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^3.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
